fix Bug 101583:Номенклатура, change broken styles for disabled select-input and date-input

--- a/src/eos-common/dynamic-form-input/dynamic-input.component.scss
+++ b/src/eos-common/dynamic-form-input/dynamic-input.component.scss
@@ -170,8 +170,11 @@ eos-dynamic-input {
             }
         }
     }
-    .pad-left{
-        padding-left: 20px; 
+    .pad-left {
+        padding-left: 20px;
+    }
+    .pad-right {
+        padding-right: 20px;
     }
     .input-button-container {
         // width: 300px;
